kube/applications/byparr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: byparr
  namespace: media
  annotations:
    ignore-check.kube-linter.io/latest-tag: >-
      FIXME: fix this one
    ignore-check.kube-linter.io/no-read-only-root-fs: >-
      FIXME: fix this one
    ignore-check.kube-linter.io/run-as-non-root: >-
      FIXME: fix this one
    ignore-check.kube-linter.io/unset-memory-requirements: >-
      FIXME: fix this one
    ignore-check.kube-linter.io/unset-cpu-requirements: >-
      FIXME: fix this one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: byparr
  template:
    metadata:
      labels:
        app: byparr
    spec:
      containers:
        - name: byparr
          image: ghcr.io/thephaseless/byparr:latest
          ports:
            - containerPort: 8191
