kube/applications/byparr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: byparr
  namespace: media
spec:
  selector:
    app: byparr
  ports:
    - protocol: TCP
      port: 8191
      targetPort: 8191
