kube/applications/byparr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: byparr
spec:
  rules:
    - host: byparr.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: byparr
                port:
                  number: 8191
  tls:
    - hosts:
        - byparr.${DOMAIN}
      secretName: wildcard-cert
